# experiment-utils-pd

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json  test_balance_output.py  test_optimization.py  test_smart_search.py  test_target_comparisons_consistency.py  test_warning_fix.py
.claude/rules/: global-agent-rules.md
.cursor/rules/: agents.md
.github/workflows/: ci.yaml  publish-to-pypi.yml  release-please.yml
docs/superpowers/plans/: 2026-04-01-tost-equivalence-testing.md
docs/superpowers/specs/: 2026-04-01-tost-equivalence-testing-design.md
examples/: balance_check_example.py  bootstrap_unified_columns.py  cumulative_impact.py  cumulative_impact_extensions.py  cumulative_methods_recovery.py  effect_distribution_portfolio.py  exaggeration_bias_and_correction.py  find_sample_size_example.py  fixed_effects_example.py  fpr_and_sequential_testing.py  glm_examples.py  guardrail_correlation_prior.py  interactive_testing.py  ipw_vs_regression_simulation.py  joint_metric_shrinkage_mvn.py  minimum_effect_and_critical_effect.py  multiple-variants-testing.py  plot_effects_example.py  precision_comparison.py  precision_comparison_simple.py  retrodesign_bias_example.py  scaled_ship_method_assessment.py  shrinkage_methods_tour.py  survival_ipw.py  test_color_direction.py
experiment_utils/: __init__.py  bootstrap.py  entbal.py  estimators.py  experiment_analyzer.py  meta_analysis.py  plotting.py  power_sim.py  retrodesign.py  shrinkage.py  utils.py
experiment_utils_pd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tasks/: lessons.md
tests/: interactive_testing.py  iv.py  test_balance_check.py  test_balanced_assignment.py  test_balanced_random_assignment.py  test_bootstrap.py  test_categorical_treatment.py  test_critical_effect.py  test_cumulative_impact.py  test_cumulative_impact_extensions.py  test_cumulative_methods_recovery.py  test_equivalence.py  test_experiment_analyzer.py  test_fixed_effects.py  test_fpr.py  test_joint_metric_shrinkage_mvn.py  test_msprt_summary.py  test_nss_adjusted_cumulative.py  test_power_sim.py  test_retrodesign.py  test_sequential.py  test_weights.py  test_winners_curse.py
